[workspace]

members = [
    "engine",
]

[package]
name = "luminous_ld46"
version = "0.1.0"
description = ""
authors = ["Ervin Oro", "Rao Zvorovski"]
license = "ISC"
repository = "https://github.com/Luminous-Games/ld46"
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.60"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = "0.4.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.6"

web-sys = { version = "0.3.37", features = ['console'] }

nalgebra = "0.20"

engine = { path = "./engine" }
log = "0.4.6"
wasm-logger = "0.2.0"


[dev-dependencies]
wasm-bindgen-test = "0.3.10"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"