[package]
name = "engine"
version = "0.1.0"
authors = ["Ervin Oro", "Rao Zvorovski"]
license = "ISC"
edition = "2018"


[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
nalgebra = "0.20"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]