[package]
name = "engine"
version = "0.1.0"
authors = ["Ervin Oro", "Rao Zvorovski"]
license = "ISC"
edition = "2018"


[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"
nalgebra = "0.17"
wee_alloc = "0.4.5"
num = "0.2.1"
num-derive = "0.3.0"
num-traits = "0.2.11"
downcast-rs = "1.1.1"
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'EventListener',
  'FocusEvent',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'MouseEvent',
  'HtmlImageElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
]